[gd_scene load_steps=9 format=3 uid="uid://m1ljkkxjc4l2"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_0wpyu"]
[ext_resource type="Texture2D" uid="uid://dte3r4xpvoxhd" path="res://assets/textures/bg.png" id="1_051qo"]
[ext_resource type="PackedScene" uid="uid://xd3kcpj735bi" path="res://scenes/player.tscn" id="2_8h5x8"]
[ext_resource type="PackedScene" uid="uid://duhrt0t6il1vh" path="res://scenes/hud.tscn" id="2_c5a3o"]
[ext_resource type="PackedScene" uid="uid://c62j5f81hi351" path="res://scenes/enemy_spawner.tscn" id="3_lvri5"]
[ext_resource type="AudioStream" uid="uid://d174xtghttxub" path="res://assets/audio/hit.wav" id="6_1t2q6"]
[ext_resource type="AudioStream" uid="uid://dm7nhpkt1x3al" path="res://assets/audio/explode.wav" id="7_q8r1w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_khcwb"]
size = Vector2(157, 851)

[node name="Game" type="Node2D"]
script = ExtResource("1_0wpyu")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_c5a3o")]

[node name="Background" type="TextureRect" parent="."]
offset_right = 1282.0
offset_bottom = 720.0
texture = ExtResource("1_051qo")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_8h5x8")]
position = Vector2(49, 345)

[node name="EnemySpawner" parent="." instance=ExtResource("3_lvri5")]

[node name="Deathzone" type="Area2D" parent="."]
position = Vector2(-283, 1)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathzone"]
position = Vector2(68.5, 355.5)
shape = SubResource("RectangleShape2D_khcwb")

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1t2q6")

[node name="PlayerHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_q8r1w")

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="path_enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawned"]
[connection signal="area_entered" from="Deathzone" to="." method="_on_deathzone_area_entered"]
